fixed z-index issues with dropdown

--- a/src/app/components/header-main/header-main.component.scss
+++ b/src/app/components/header-main/header-main.component.scss
@@ -12,7 +12,7 @@
   align-items: center;
   background-color: $BLACK__COLOR;
   color: $WHITE__COLOR;
-  z-index: 10;
+  z-index: 100;
   & .container {
     display: flex;
     justify-content: space-between;
